--- a/Etkezde.csproj
+++ b/Etkezde.csproj
@@ -3,8 +3,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="3.2.11" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.113.1" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6"/>
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="3.2.11"/>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2"/>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.1"/>
   </ItemGroup>
 </Project>
